--- a/package.json
+++ b/package.json
@@ -1,39 +1,45 @@
 {
-  "name": "dog-training",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@material-ui/core": "^3.9.3",
-    "@material-ui/icons": "^3.0.2",
-    "@types/jest": "24.0.12",
-    "@types/node": "11.13.9",
-    "@types/react": "16.8.15",
-    "@types/react-dom": "16.8.4",
-    "node-sass": "^4.12.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "3.0.0",
-    "typescript": "3.4.5"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "dog-training",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@atlaskit/css-reset": "^4.0.0",
+        "@material-ui/core": "^3.9.3",
+        "@material-ui/icons": "^3.0.2",
+        "@types/jest": "24.0.12",
+        "@types/lodash": "^4.14.123",
+        "@types/node": "11.13.9",
+        "@types/react": "16.8.15",
+        "@types/react-beautiful-dnd": "^11.0.1",
+        "@types/react-dom": "16.8.4",
+        "lodash": "^4.17.11",
+        "node-sass": "^4.12.0",
+        "react": "^16.8.6",
+        "react-beautiful-dnd": "^11.0.2",
+        "react-dom": "^16.8.6",
+        "react-icons": "^3.6.1",
+        "react-scripts": "3.0.0",
+        "typescript": "3.4.5"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": "react-app"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    }
 }
