--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "react-dom": "^16.8.6",
         "react-icons": "^3.6.1",
         "react-scripts": "3.0.0",
+        "rxjs": "^6.5.1",
         "typescript": "3.4.5"
     },
     "scripts": {
