--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@types/react": "16.8.15",
         "@types/react-beautiful-dnd": "^11.0.1",
         "@types/react-dom": "16.8.4",
+        "@types/uuid": "^3.4.4",
         "lodash": "^4.17.11",
         "node-sass": "^4.12.0",
         "react": "^16.8.6",
@@ -20,7 +21,8 @@
         "react-icons": "^3.6.1",
         "react-scripts": "3.0.0",
         "rxjs": "^6.5.1",
-        "typescript": "3.4.5"
+        "typescript": "3.4.5",
+        "uuid": "^3.3.2"
     },
     "scripts": {
         "start": "react-scripts start",
