--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,12 +10,12 @@
     {
       "src": "./icon_192x192.png",
       "sizes": "192x192",
-      "type": "image/x-icon"
+      "type": "image/png"
     },
     {
       "src": "./icon_512x512.png",
       "sizes": "512x512",
-      "type": "image/x-icon"
+      "type": "image/png"
     }
   ],
   "start_url": ".",
