--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,17 +8,17 @@
       "type": "image/x-icon"
     },
     {
-      "src": "/icon_192x192.png",
+      "src": "icon_192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/icon_512x512.png",
+      "src": "icon_512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
   ],
-  "start_url": ".",
+  "start_url": "index.html",
   "display": "standalone",
   "theme_color": "#333",
   "background_color": "#333"
