--- a/public/manifest.json
+++ b/public/manifest.json
@@ -18,7 +18,7 @@
       "type": "image/png"
     }
   ],
-  "start_url": "/",
+  "start_url": "/index.html",
   "display": "standalone",
   "theme_color": "#333",
   "background_color": "#333"
