--- a/package.json
+++ b/package.json
@@ -8,24 +8,25 @@
         "@material-ui/icons": "^3.0.2",
         "@types/jest": "24.0.12",
         "@types/lodash": "^4.14.123",
+        "@types/lodash.debounce": "^4.0.6",
         "@types/node": "11.13.9",
         "@types/react": "16.8.15",
         "@types/react-beautiful-dnd": "^11.0.1",
         "@types/react-dom": "16.8.4",
         "@types/uuid": "^3.4.4",
-        "lodash": "^4.17.11",
-        "node-sass": "^4.12.0",
+        "lodash": "^4.17.15",
+        "lodash.debounce": "^4.0.8",
+        "node-sass": "^4.13.1",
         "react": "^16.8.6",
         "react-beautiful-dnd": "^11.0.2",
         "react-dom": "^16.8.6",
         "react-icons": "^3.6.1",
-        "react-scripts": "3.0.0",
-        "rxjs": "^6.5.1",
+        "react-scripts": "^3.3.1",
         "typescript": "3.4.5",
         "uuid": "^3.3.2"
     },
     "scripts": {
-        "start": "react-scripts start",
+        "start": "REACT_APP_API_PREFIX=https://dog-training-back.herokuapp.com/api react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
