--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "@atlaskit/css-reset": "^4.0.0",
         "@material-ui/core": "^3.9.3",
         "@material-ui/icons": "^3.0.2",
+        "@types/classnames": "^2.2.11",
         "@types/jest": "24.0.12",
         "@types/lodash": "^4.14.123",
         "@types/lodash.debounce": "^4.0.6",
@@ -13,7 +14,9 @@
         "@types/react": "16.8.15",
         "@types/react-beautiful-dnd": "^11.0.1",
         "@types/react-dom": "16.8.4",
+        "@types/react-router-dom": "^5.1.6",
         "@types/uuid": "^3.4.4",
+        "classnames": "^2.2.6",
         "lodash": "^4.17.20",
         "lodash.debounce": "^4.0.8",
         "node-sass": "^4.13.1",
@@ -21,6 +24,7 @@
         "react-beautiful-dnd": "^11.0.2",
         "react-dom": "^16.8.6",
         "react-icons": "^3.6.1",
+        "react-router-dom": "^5.2.0",
         "react-scripts": "^3.3.1",
         "typescript": "3.4.5",
         "uuid": "^3.3.2"
