--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
     "version": "0.1.1",
     "private": true,
     "dependencies": {
-        "@atlaskit/css-reset": "^4.0.1",
-        "@material-ui/core": "^3.9.4",
-        "@material-ui/icons": "^3.0.2",
+        "@atlaskit/css-reset": "^6.0.5",
+        "@material-ui/core": "^4.11.3",
+        "@material-ui/icons": "^4.11.2",
         "@types/classnames": "^2.2.11",
         "@types/jest": "24.0.12",
         "@types/lodash": "^4.14.165",
@@ -14,8 +14,10 @@
         "@types/react": "16.8.15",
         "@types/react-beautiful-dnd": "^11.0.5",
         "@types/react-dom": "16.8.4",
+        "@types/react-redux": "^7.1.16",
         "@types/react-router-dom": "^5.1.6",
         "@types/uuid": "^3.4.9",
+        "axios": "^0.21.1",
         "classnames": "^2.2.6",
         "lodash": "^4.17.20",
         "lodash.debounce": "^4.0.8",
@@ -24,8 +26,9 @@
         "react-beautiful-dnd": "^11.0.5",
         "react-dom": "^16.14.0",
         "react-icons": "^3.11.0",
+        "react-redux": "^7.2.2",
         "react-router-dom": "^5.2.0",
-        "react-scripts": "^3.4.4",
+        "react-scripts": "^4.0.3",
         "typescript": "3.4.5",
         "uuid": "^3.4.0"
     },
