--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.1",
     "private": true,
     "dependencies": {
+        "@apollo/react-hooks": "^4.0.0",
         "@atlaskit/css-reset": "^6.0.5",
         "@material-ui/core": "^4.11.3",
         "@material-ui/icons": "^4.11.2",
@@ -11,18 +12,21 @@
         "@types/lodash": "^4.14.165",
         "@types/lodash.debounce": "^4.0.6",
         "@types/node": "11.13.9",
-        "@types/react": "16.8.15",
+        "@types/react": "^17.0.3",
         "@types/react-beautiful-dnd": "^11.0.5",
         "@types/react-dom": "16.8.4",
         "@types/react-redux": "^7.1.16",
         "@types/react-router-dom": "^5.1.6",
         "@types/uuid": "^3.4.9",
+        "apollo-boost": "^0.4.9",
         "axios": "^0.21.1",
         "classnames": "^2.2.6",
+        "graphql": "^15.5.0",
         "lodash": "^4.17.20",
         "lodash.debounce": "^4.0.8",
         "node-sass": "^4.14.1",
         "react": "^16.14.0",
+        "react-apollo": "^3.1.5",
         "react-beautiful-dnd": "^11.0.5",
         "react-dom": "^16.14.0",
         "react-icons": "^3.11.0",
@@ -33,7 +37,7 @@
         "uuid": "^3.4.0"
     },
     "scripts": {
-        "start": "REACT_APP_API_PREFIX=https://dog-training-strapi.herokuapp.com react-scripts start",
+        "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
@@ -52,5 +56,11 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^4.19.0",
+        "@typescript-eslint/parser": "^4.19.0",
+        "eslint": "^7.22.0",
+        "eslint-plugin-react": "^7.23.1"
     }
 }
