--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
         "graphql": "^15.5.0",
         "lodash": "^4.17.20",
         "lodash.debounce": "^4.0.8",
-        "node-sass": "^7.0.0",
+        "prettier": "^2.6.1",
         "react": "^16.14.0",
         "react-apollo": "^3.1.5",
         "react-beautiful-dnd": "^11.0.5",
@@ -33,6 +33,7 @@
         "react-redux": "^7.2.2",
         "react-router-dom": "^5.2.0",
         "react-scripts": "^4.0.3",
+        "sass": "^1.49.9",
         "typescript": "3.4.5",
         "uuid": "^3.4.0"
     },
