--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
     "dependencies": {
         "@apollo/react-hooks": "^4.0.0",
         "@atlaskit/css-reset": "^6.0.5",
+        "@date-io/date-fns": "^1.3.13",
         "@material-ui/core": "^4.11.3",
         "@material-ui/icons": "^4.11.2",
+        "@material-ui/pickers": "^3.3.10",
         "@types/classnames": "^2.2.11",
         "@types/jest": "24.0.12",
         "@types/lodash": "^4.14.165",
@@ -21,6 +23,7 @@
         "apollo-boost": "^0.4.9",
         "axios": "^0.21.1",
         "classnames": "^2.2.6",
+        "date-fns": "^2.28.0",
         "graphql": "^15.5.0",
         "lodash": "^4.17.20",
         "lodash.debounce": "^4.0.8",
